Small fixes and improvments and it looks like it works yeaah
